# EGA

./: CMakeLists.txt  Field.h  GeneAlgo.cpp  My_Algorithms.h  README.md  gen_test  gr_test  gr_test15  test  test15
include/: BFS_alg.h  BFS_with_Grey.h  Climbimg_the_hill_algo.h  DFS_alg.h  Genetic.h  Monte_Carlo_alg.h  My_Algorithms.h  adaptations.hpp  includes.h  menu.hpp  utils.h
include/genetic_headers/: crossovers.hpp  ending_conditions.hpp  genetic_algorithm.hpp  individ_limitations.hpp  mutations.hpp  reproductive_strategies.hpp  selection_strategies.hpp  start_forming_algorithms.hpp
scripts/: build.sh
src/: BFS_Grey_alg.cpp  BFS_alg.cpp  DFS_alg.cpp  GeneAlgo.cpp  MNC.cpp  MNN.cpp  Random_alg.cpp  danzig.cpp  genetic_algorithm.cpp  greedy.cpp  monte_carlo.cpp  test_utils.cpp
